--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,37 +1,15 @@
-*~
-.*.swp
-.DS_Store
-
-dist
-.cache
 node_modules
-
 package-lock.json
-
-.vscode
-
-/image/*
-
+# Keep environment variables out of version control
 .env
+config/config.json
+utils/database/config/config.json
+utils/database/bak/
+prisma/
 
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+models/user.model.mongoose.js
+utils/database/database.connect.js
 
-# dependencies
-/.pnp
-.pnp.js
+.vscode/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log
+upload/
