--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,37 @@
 {
-  "name": "mern-project",
+  "name": "p7-draft-project",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon server"
   },
   "keywords": [],
-  "author": "",
+  "author": "ipopop",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.28.0",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "helmet": "^4.6.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.13",
+    "moment": "^2.24.0",
     "multer": "^2.0.0-rc.1",
-    "nodemon": "^2.0.6",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.7",
+    "sequelize-cli": "^6.2.0",
     "reactjs-popup": "^2.0.4",
+    "swagger-ui-express": "^4.1.4",
     "validator": "^13.1.17"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
